[gd_scene load_steps=13 format=2]

[ext_resource path="res://img/bg.png" type="Texture" id=1]
[ext_resource path="res://img/cookiePressed.png" type="Texture" id=2]
[ext_resource path="res://img/cookie.png" type="Texture" id=3]
[ext_resource path="res://img/topBar.png" type="Texture" id=4]
[ext_resource path="res://game.gd" type="Script" id=5]
[ext_resource path="res://Fonts/VT323-Regular.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://font_22.tres" type="DynamicFont" id=7]
[ext_resource path="res://img/menuBg.png" type="Texture" id=8]
[ext_resource path="res://img/shopButton.png" type="Texture" id=9]
[ext_resource path="res://img/closeButton.png" type="Texture" id=10]
[ext_resource path="res://shop.tscn" type="PackedScene" id=11]

[sub_resource type="DynamicFont" id=1]
size = 30
font_data = ExtResource( 6 )

[node name="Game" type="Node2D"]
script = ExtResource( 5 )

[node name="UI" type="CanvasLayer" parent="."]
layer = -5

[node name="bg" type="Sprite" parent="UI"]
texture = ExtResource( 1 )
centered = false

[node name="topBar" type="Sprite" parent="UI"]
texture = ExtResource( 4 )
centered = false

[node name="Control" type="Control" parent="."]
margin_right = 480.0
margin_bottom = 800.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton" type="TextureButton" parent="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -150.0
margin_top = -150.0
margin_right = 150.0
margin_bottom = 150.0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="money" type="Label" parent="Control"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -20.0
margin_top = 35.0
margin_right = 20.0
margin_bottom = 30.0
custom_fonts/font = SubResource( 1 )
text = "Money"
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="mpsec" type="Label" parent="Control"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -20.0
margin_top = 70.0
margin_right = 20.0
margin_bottom = 23.0
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 0.266667, 0.87451, 0.0941176, 1 )
text = "/s"
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PopupMenu" type="PopupMenu" parent="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_right = 20.0
margin_bottom = 20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="Control/PopupMenu"]
texture = ExtResource( 8 )

[node name="MenuClose" type="TextureButton" parent="Control/PopupMenu"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -213.683
margin_top = -208.02
margin_right = -156.683
margin_bottom = -151.02
texture_normal = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="shop" parent="Control/PopupMenu" instance=ExtResource( 11 )]
position = Vector2( -169.897, -111.377 )

[node name="MenuOpen" type="TextureButton" parent="Control"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -130.0
margin_right = 130.0
texture_normal = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Moneypersec" type="Timer" parent="."]
autostart = true

[connection signal="pressed" from="Control/TextureButton" to="." method="_on_TextureButton_pressed"]
[connection signal="pressed" from="Control/PopupMenu/MenuClose" to="." method="_on_MenuClose_pressed"]
[connection signal="pressed" from="Control/MenuOpen" to="." method="_on_MenuOpen_pressed"]
[connection signal="timeout" from="Moneypersec" to="." method="_on_Moneypersec_timeout"]
